--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-#server.port=9999
-server.port=8080
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/pmdb
 spring.datasource.username=root
 spring.datasource.password=pass@word1
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.showsql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
